# sudoku

./: .gitignore  README.md  sw_app.c  sw_app_msg.h  sw_cfg.h
android/: .cproject  .project  AndroidManifest.xml  CMakeLists.txt
android/jni/: Android.mk  app_jni.c  app_jni.h
android/src/com/qlik/sudoku/: AppActivity.java  AppJni.java  AppTexture.java  AppView.java
ios/: main.m
ios/Base.lproj/: Main.storyboard
ios/classes/: AppDelegate.h  AppDelegate.m  AppView.h  AppView.m  AppViewController.h  AppViewController.m
ios/sudoku.xcodeproj/: project.pbxproj
src/: solver.c  solver.h  sudoku.c  sudoku.h  sv.c  sv.h  tex_main.c  tex_main.h
sw/: sw_anm.h  sw_app.h  sw_dbg.h  sw_def.h  sw_gfx.h  sw_img.h  sw_list.h  sw_msg.h  sw_rnd.h  sw_spr.h  sw_tex.h
sw/and/: and_dbg.c  and_tex.c  ogl.h
sw/com/: com_anm.c  com_app.c  com_def.c  com_list.c  com_msg.c  com_rnd.c  com_spr.c  com_spr.h
sw/ios/: ios_dbg.m  ios_gfx.m  ios_snd.m  ios_tex.m  oal.h  ogl.h
sw/ogl/: ogl_gfx.c  ogl_gfx.h  ogl_img.c  ogl_img.h  ogl_mat.h  ogl_quad.c  ogl_quad.h  ogl_spr.c  ogl_spr.h  ogl_tex.c  ogl_tex.h  ogl_tran.c  ogl_tran.h
